crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__wildcard_one_field.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
  1 ignored#4 -> 42
  2 ignored#5 ignored#6 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)
    (lam ignored_4 (con integer 42))
    (lam ignored_5 (lam ignored_6 (con integer 42)))))
--- optimized Core
let anf#4 : int = trace "field" in 0 in
let anf#5 : @constr[1](int) = constr 1 anf#4 in
case@Tag anf#5 of
  0 -> 42
  1 ignored#1 -> 42
  2 ignored#2 ignored#3 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_11
    [(lam anf_6
      [(lam anf_7
        (case
          anf_7
          (con integer 42)
          (lam ignored_8 (con integer 42))
          (lam ignored_9 (lam ignored_10 (con integer 42)))))
        (constr 1 anf_6)])
      (force [[builtin_11 (con string "field")] (delay (con integer 0))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
  1 ignored#4 -> 42
  2 ignored#5 ignored#6 -> 42
--- uplc before
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)
    (lam ignored_4 (con integer 42))
    (lam ignored_5 (lam ignored_6 (con integer 42)))))
--- core after
let ignored#4 : int = trace "field" in 0 in
42
--- uplc after
(program 1.1.0
  [(lam ignored_4 (con integer 42))
    (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))])])
--- result
(con integer 42)
--- logs
["field"]
