crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__wildcard_two_fields.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 2 (trace "field" in 0) (trace "field" in 0) of
  0 -> 42
  1 ignored#7 -> 42
  2 ignored#8 ignored#9 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 2
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))])
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)
    (lam ignored_7 (con integer 42))
    (lam ignored_8 (lam ignored_9 (con integer 42)))))
--- optimized Core
let anf#4 : int = trace "field" in 0 in
let anf#5 : int = trace "field" in 0 in
let anf#6 : @constr[2](int, int) = constr 2 anf#4 anf#5 in
case@Tag anf#6 of
  0 -> 42
  1 ignored#1 -> 42
  2 ignored#2 ignored#3 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam partial_14
      [(lam anf_7
        [(lam anf_8
          [(lam anf_9
            (case
              anf_9
              (con integer 42)
              (lam ignored_10 (con integer 42))
              (lam ignored_11 (lam ignored_12 (con integer 42)))))
            (constr 2 anf_7 anf_8)])
          (force [partial_14 (delay (con integer 0))])])
        (force [partial_14 (delay (con integer 0))])])
      [builtin_13 (con string "field")]])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Tag constr 2 (trace "field" in 0) (trace "field" in 0) of
  0 -> 42
  1 ignored#7 -> 42
  2 ignored#8 ignored#9 -> 42
--- uplc before
(program 1.1.0
  (case
    (constr 2
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))])
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)
    (lam ignored_7 (con integer 42))
    (lam ignored_8 (lam ignored_9 (con integer 42)))))
--- core after
let ignored#8 : int = trace "field" in 0 in
let ignored#9 : int = trace "field" in 0 in
42
--- uplc after
(program 1.1.0
  [(lam ignored_8
    [(lam ignored_9 (con integer 42))
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))])])
    (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))])])
--- result
(con integer 42)
--- logs
["field", "field"]
