crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__wrong_test.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
assertion_line: 280
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(c), pretty(after))"
---
--- before
case@Tag constr 0 of
  True -> 42
--- after
case@Tag constr 0 of
  True -> 42
--- errors
InvalidCase("tag branches must cover consecutive unique tags")
InvalidCase("tag branches must cover consecutive unique tags")
